@@ -135,7 +135,7 @@ gerb_fgetdouble(gerb_file_t *fd)
     errno = 0;
     result = strtod(fd->data + fd->ptr, &end);
     if (errno) {
-	GERB_COMPILE_ERROR("Failed to read integer");
+	GERB_COMPILE_ERROR("Failed to read double");
 	return 0.0;
     }
 
