@@ -43,11 +43,15 @@ setup_init(void)
     memset((void *)&setup, 0, sizeof(setup_t));
 
     fontstring = (char *)malloc(strlen(DEF_DISTFONTNAME) + 1);
+    if (fontstring == NULL)
+        return;
     memset((void *)fontstring, 0, strlen(DEF_DISTFONTNAME) + 1);
     strncpy(fontstring, DEF_DISTFONTNAME, strlen(DEF_DISTFONTNAME));
     setup.dist_fontname = fontstring;
 
     fontstring = (char *)malloc(strlen(DEF_STATUSFONTNAME) + 1);
+    if (fontstring == NULL)
+        return;
     memset((void *)fontstring, 0, strlen(DEF_STATUSFONTNAME) + 1);
     strncpy(fontstring, DEF_STATUSFONTNAME, strlen(DEF_STATUSFONTNAME));
     setup.status_fontname = fontstring;
@@ -58,6 +62,8 @@ setup_init(void)
 void
 setup_destroy(void)
 {
-    free(setup.dist_fontname);
-    free(setup.status_fontname);
+    if (setup.dist_fontname)
+	free(setup.dist_fontname);
+    if (setup.status_fontname)
+	free(setup.status_fontname);
 }
